Fixes for; quote alignements, slide show wrapping, and footer elements

--- a/components/_components.image-slide-show.scss
+++ b/components/_components.image-slide-show.scss
@@ -3,12 +3,12 @@
 ===============================*/
 
 .slide-show-block {
-    .block:last-child {
-        max-width: 970px;
-        margin-right: auto;
-        margin-left: auto;
+    // .block:last-child {
+    //     max-width: 970px;
+    //     margin-right: auto;
+    //     margin-left: auto;
         
-    }
+    // }
     .slide-show-image {
         position: relative;
         border: 1px solid $grey-silver;
@@ -30,7 +30,8 @@
         }
         img {
             vertical-align: middle;
-            max-width: 100% !important;
+            max-width: 100%;
+            max-height: 100%;
             height: auto;
             display: block;
             margin: auto;
