--- a/components/_components.simple-blocks.scss
+++ b/components/_components.simple-blocks.scss
@@ -167,23 +167,25 @@ $nm-bg-color: $grey-gallery;
     }
     .tag-wrap {
         // float: right;
-        display: inline-block;
-        margin-top: 0.3em;
+        // display: inline-block;
+        // margin-top: 0.3em;
         padding-left: 1.3em;
         @include media ($mobile-large-and-smaller) {
             @include span-columns (6);
         }
         @include span-columns (5);
         .tag {
-            vertical-align: bottom;
+            display: inline-block;
+            vertical-align: top;
             color: $green-victoria;
             // float: right;
-            font-size: 0.8em;
+            font-size: 0.98em;
             // background-color: $grey-alto;
-            margin: 0.5em;
+            font-weight: 600;
+            // margin: 0.5em;
             padding: 0.5em;
-            border: 1px solid $green-victoria;
-            border-radius: $base-border-radius;
+            // border: 1px solid $green-victoria;
+            // border-radius: $base-border-radius;
             &:first-child {
                 margin-right: 0.3em;
             }
